module(name = "imaging")

bazel_dep(name = "rules_go", version = "0.48.0")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")
bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_anthonynsimon_bild",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_cenkalti_dominantcolor",
    "com_github_golang_mock",
    "com_github_google_go_cmp",
    "com_github_jarcoal_httpmock",
    "com_github_kolesa_team_go_webp",
    "com_github_mitchellh_mapstructure",
    "com_github_rs_zerolog",
    "com_github_spf13_viper",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_sync",
)
