load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "logs",
    srcs = ["logger.go"],
    importpath = "github.com/Artistichek/imaging/logs",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
    ],
)
