load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "annotationspb_proto",
    srcs = ["oneof.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
        "@googleapis//google/api:field_behavior_proto",
    ],
)

go_proto_library(
    name = "annotationspb_go_proto",
    compilers = ["@rules_go//proto:go_proto"],
    importpath = "github.com/Artistichek/imaging/api/annotations",
    proto = ":annotationspb_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)
