load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "s3",
    srcs = [
        "client.go",
        "config.go",
        "errors.go",
    ],
    importpath = "github.com/Artistichek/imaging/internal/s3",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/s3/types",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_credentials//:credentials",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@org_golang_x_sync//errgroup",
    ],
)
