load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/Artistichek/imaging/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//api/imaging/v1:imagingpb_go_proto",
        "//internal/extractor",
        "//internal/extractor/decoding",
        "//internal/extractor/http",
        "//internal/processor",
        "//internal/processor/dominator",
        "//internal/processor/encoding",
        "//internal/s3",
        "//internal/s3/types",
        "//logs",
        "@org_golang_google_genproto_googleapis_rpc//errdetails",
        "@org_golang_google_genproto_googleapis_rpc//status",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server"],
    deps = [
        "//api/imaging/v1:imagingpb_go_proto",
        "//internal/processor",
        "//internal/processor/dominator",
        "//internal/processor/mock",
        "//internal/s3",
        "//internal/s3/mock",
        "//logs",
        "//test/base64",
        "//test/errorcmp",
        "@com_github_golang_mock//gomock",
        "@com_github_google_go_cmp//cmp",
        "@com_github_jarcoal_httpmock//:httpmock",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
