load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "resizer",
    srcs = ["resizer.go"],
    importpath = "github.com/Artistichek/imaging/internal/processor/resizer",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_anthonynsimon_bild//transform"],
)

go_test(
    name = "resizer_test",
    srcs = ["resizer_test.go"],
    embed = [":resizer"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
