load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "types",
    srcs = [
        "objectinput.go",
        "objectkey.go",
    ],
    importpath = "github.com/Artistichek/imaging/internal/s3/types",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_aws_aws_sdk_go_v2_service_s3//types",
    ],
)
